<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActivityFragmentDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="glass_text_format_time_24">HH:mm</string>
    <string name="glass_text_format_time_12">hh:mm</string>
    <string name="glass_text_timing_24">mm:ss</string>
    <string name="glass_text_timing_12">mm:ss</string>
    <string name="glass_text_settings_label_launcher">Settings</string>
    <string name="glass_phone_contacts_title">Phone Book</string>
    <string name="glass_navigation_title">Navigation</string>
    <string name="glass_voicecommand_title">Voice Command</string>
    <string name="glass_recordvideo_title">Record Video</string>
    <string name="glass_takephoto_title">Take Photo</string>
    <string name="glass_callrecord_title">Call Records</string>
    <string name="glass_dialpad_title">DialPad</string>
    <string name="glass_one">1</string>
    <string name="glass_two">2</string>
    <string name="glass_three">3</string>
    <string name="glass_four">4</string>
    <string name="glass_five">5</string>
    <string name="glass_six">6</string>
    <string name="glass_seven">7</string>
    <string name="glass_eight">8</string>
    <string name="glass_nine">9</string>
    <string name="glass_zero">0</string>
    <string name="glass_asterisk">*</string>
    <string name="glass_hash">#</string>
    <string name="glass_dial">Dial</string>
    <string name="glass_backspace">&lt;=</string>
    <string name="glass_number_no_null">The dialed number cannot be empty</string>
    <string name="glass_number_invalid">The phone number you entered is invalid</string>
    <string name="glass_imei_identifier">IMEI</string>
    <string name="glass_music_title">Music</string>
    <string name="glass_settings_title">Settings</string>
    <string name="glass_pearview_title">Preview</string>
    <string name="glass_wlan_title">Wireless Network</string>
    <string name="glass_turn_on_title">Turn On</string>
    <string name="glass_shut_down_title">Shut Down</string>
    <string name="glass_language_title">Language</string>
    <string name="glass_current_language_title">Current language</string>
    <string name="glass_wlan_connected_info">Connected to:\n%1$s</string>
    <string name="glass_wlan_disconnect_info">No network connected</string>
    <string name="wifi_signal_strength">Signal strength:</string>
    <string name="wifi_safety">Safety:</string>
    <string name="wifi_info">Info:</string>
    <string name="wifi_signal_level_very_strong">Very Strong</string>
    <string name="wifi_signal_level_strong">Strong</string>
    <string name="wifi_signal_level_general">General</string>
    <string name="wifi_signal_level_very_weak">Very Weak</string>
    <string name="wifi_signal_level_null">UnKnown</string>
    <string name="wifi_letter_abc">ABC</string>
    <string name="wifi_letter_def">DEF</string>
    <string name="wifi_letter_ghi">GHI</string>
    <string name="wifi_letter_jkl">JKL</string>
    <string name="wifi_letter_mno">MNO</string>
    <string name="wifi_letter_pqrs">PQRS</string>
    <string name="wifi_letter_tuv">TUV</string>
    <string name="wifi_letter_wxyz">WXYZ</string>
    <string name="wifi_letter_add">+</string>
    <string name="glass_save_failed">Saving photo failed</string>
    <string name="glass_backup_title">Backup</string>
    <string name="glass_backup_contacts_btn">Backup contact</string>
    <string name="glass_settings_noti_title">Notification setting</string>
    <string name="glass_settings_noti_note_title">Push notification settings</string>
    <string name="glass_settings_noti_tencent_mm_title">Tencent mm</string>
    <string name="glass_settings_noti_tencent_qq_title">Tencent qq</string>
    <string name="glass_settings_noti_android_mms_title">SMS</string>
    <string name="glass_settings_noti_incallui_title">Call</string>
    <string name="system_text_sending">Sending</string>
    <string name="system_text_receiving">Receiving</string>
    <string name="system_text_start_scan">Start scanning</string>
    <string name="system_text_stop_scan">Stop scanning</string>
    <string name="system_text_send">Send an ad</string>
    <string name="system_text_stop_send">Stop an ad</string>
    <string name="system_text_blue_no_support">Your device does not support Bluetooth</string>
    <string name="system_text_blue_le_no_support">Your Bluetooth device does not support low power operation</string>
    <string name="system_text_blue_peripheral_no_support">Your Bluetooth device does not support the perimeter ad feature</string>
    <string name="system_text_openblue_dialog_message">Is it allowed to turn on Bluetooth?</string>
    <string name="system_text_status">Unknown state</string>
    <string name="system_text_send_success">Sent successfully</string>
    <string name="system_text_disconnection">Disconnect</string>
    <!-- adv error -->
    <string name="system_text_adv_error_one">Ad data is larger than 31 bytes</string>
    <string name="system_text_adv_error_two">No ad instances available</string>
    <string name="system_text_adv_error_three">The ad has started, so the ad can’t be served again</string>
    <string name="system_text_adv_error_four">Operation failed due to internal error</string>
    <string name="system_text_adv_error_five">This feature is not supported on this platform</string>
    <string name="system_text_connect_success">Connection succeeded</string>
    <string name="system_text_connect_failed">Connection failed</string>
    <string name="system_text_send_data">Send Content</string>
    <string name="system_text_send_edit_hint">Please enter the content to send</string>
    <!-- blue type -->
    <string name="le_blue_device">LE</string>
    <string name="double_blue_device">BR/EDR/LE</string>
    <string name="br_edr_blue_device">BR/EDR</string>
    <string name="unknown_blue_device">UNKNOWN</string>
    <!-- scan error -->
    <string name="system_text_scan_error_one">No need to scan again while scanning</string>
    <string name="system_text_scan_error_two">Unable to start scanning because I can not register</string>
    <string name="system_text_scan_error_three">Fails to start scan due an internal error</string>
    <string name="system_text_scan_error_four">Low power scan function is not supported</string>
    <string name="system_text_scan_error_five">Fails to start scan as it is out of hardware resources</string>
    <string name="system_text_devie_scan">Bluetooth Scan</string>
    <!-- send server -->
    <string name="system_text_send_server_btn">Send Data</string>
    <string name="glass_default_configation">Sorry, this feature is not supported on your phone</string>
    <string name="glass_default_note">Note</string>
    <string name="glass_open_noti_permission_contents">Please go to the notification usage permission and check it, otherwise the helmet side can not receive the mobile phone notification message effectively.</string>


</resources>