<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system_text_status" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/system_text_send" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/system_text_stop_send" />
    </LinearLayout>

    <EditText
        android:id="@+id/send_server_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/system_text_send_edit_hint" />

    <Button
        android:id="@+id/send_server_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system_text_send_server_btn" />

</LinearLayout>