<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/glass_color_black"
    android:keepScreenOn="true"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.8" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/glass_color_black"
                android:cursorVisible="false"
                android:gravity="right|center_vertical"
                android:inputType="phone"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/glass_color_white"
                android:textSize="33sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical" >

                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/ic_glass_dial_delete" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Chronometer
                android:id="@+id/glass_phone_out_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:format12Hour="@string/glass_text_timing_12"
                android:format24Hour="@string/glass_text_timing_24"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/layout_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/one_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_one"
                    android:textColor="@color/glass_color_white"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/one_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/one_number"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/two_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_two"
                    android:textColor="@color/glass_color_white"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/two_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/two_number"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="ABC"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/three_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_three"
                    android:textColor="@color/glass_color_white"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/three_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/three_number"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="DEF"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/layout_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/four_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_four"
                    android:textColor="@color/glass_color_white"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/four_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/four_number"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="GHI"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/five_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_five"
                    android:textColor="@color/glass_color_white"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/five_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/five_number"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="JKL"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/six_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_six"
                    android:textColor="@color/glass_color_white"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/six_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/six_number"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="MNO"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/layout_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/seven_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_seven"
                    android:textColor="@color/glass_color_white"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/seven_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/seven_number"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="PQRS"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/eight_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_eight"
                    android:textColor="@color/glass_color_white"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/eight_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/eight_number"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="TUV"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/nine_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_nine"
                    android:textColor="@color/glass_color_white"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/nine_letters"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/nine_number"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="WXYZ"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/layout_asterisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/glass_asterisk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_asterisk"
                    android:textColor="@color/glass_color_white"
                    android:textSize="48sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/zero_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_zero"
                    android:textColor="@color/glass_color_white"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/zero_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/zero_number"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="+"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_hash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/glass_hash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/glass_color_black"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/glass_hash"
                    android:textColor="@color/glass_color_white"
                    android:textSize="34sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/glass_phone_call_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/glass_incall_btn_selector" />
    </LinearLayout>

</LinearLayout>